--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -29,31 +29,33 @@ SNR &= 2 + 10log_{10}(700/3000) \\
     &= -4.3 dB
 \end{split}
 \end{equation}
-This is ideal performance for an AWGN channel.  In practice we must allocate some power for synchronisation, such as pilot symbols used for frequency and phase estimation.  The phase, frequency, and timing estimators estimators are not perfect, which reduces performance.
+This is ideal performance for an AWGN channel.  In practice we must allocate some power to symbols used for synchronisation, such as pilot symbols used for frequency and phase estimation, or unique word bits used for frame synchronisation.  Synchronisation algorithms often struggle at low SNRs, introducing additional "implementation" losses.
 
-Performance on a multipath channels is significantly worse, typically 5 dB.  In addition, we may allocate some carrier power to deal with intersymbol interference (for example a cyclic prefix in OFDM modems).
+Performance on multipath channels is significantly worse, in our use cases typically 5 dB.  On these channels, we may allocate some carrier power to deal with intersymbol interference (for example a cyclic prefix in OFDM modems).
 
-A more complete model is
-\begin{equation}
+A more complete model is:
+\begin{equation} \label{eq:snr_all}
 SNR = \frac{E_b}{N_0} + 10log_{10}\left(\frac{R_b}{B}\right) + L_s + L_{il} + L_{cp}
 \end{equation}
 where $L_s$ is the loss from power allocated to synchronisation symbols, $L_{il}$ is the real world implementation loss, and $L_{cp}$ is the loss in SNR due to the power allocated to the cyclic prefix.
 
-Consider a repeating sequence of PSK symbols, consisting of $N_p-1$ data symbols followed by one pilot symbol, giving $N_p$ symbols in total.  Each symbol has an energy of $E_s$ Joules.  Power is energy per unit time.  For a repeatng sequence of symbols symbols the total power is:
+\subsection{Loss components}
+
+Consider a repeating sequence of PSK symbols, consisting of $N_p-1$ data symbols followed by one pilot symbol, giving $N_p$ symbols in total.  Each symbol (data or pilot) has an energy of $E_s$ Joules.  Power is energy per unit time.  For a repeating sequence of $N_p$ symbols the total power is:
 \begin{equation}
 S = \frac{E_sN_p}{T_sN_p}
 \end{equation}
 where $T_s$ is the symbol period. The power allocated to the pilot symbols is:
 \begin{equation}
 S_p = \frac{E_s}{T_sN_p}
-\end{equation}The loss in signal power due to pilot insertion is:
+\end{equation}The loss in signal power as a proportion of total power due to pilot insertion is:
 \begin{equation}
 \begin{split}
 L_p &= \frac{S - S_p}{S} \\
-    &= \frac{E_sN_p}{T_sN_p} - \frac{Es}{T_sN_p}
+    &= \frac{N_p-1}{N_p}
 \end{split}
 \end{equation}
-
+Expressed in dB, $L_p$ is a component of the synchronisation loss $L_s$ in (\ref{eq:snr_all}). For example a pilot insertion rate of $N_p=8$ results in $L_p=-0.58dB$.
 \section{Glossary}
 
 \begin{table}[h]
